src/ws-header/ws-header.scss
$header-height: $space-xl !default;
$header-color: $white !default;
$header-background-color: schema-color(5) !default;
$header-accent-background-color: schema-color(6) !default;
$header-border-color: schema-color(4) !default;

@mixin level-1() {
  background-color: $header-background-color;
  color: $header-color;
  line-height: $header-height;
  position: relative;
  z-index: 3;
  box-shadow: $paper-shadow-2;
}

@mixin level-2() {
  position: absolute;
  z-index: 2;
  background: $header-accent-background-color;
  top: $header-height;
  left: 0;
  width: 100%;
  height: $header-height * 2;
  line-height: $header-height * 2;
  transform: translate3d(0, -100%, 0);
  transition: transform .15s linear;
  overflow: hidden;
  box-shadow: $paper-shadow-3;
  &.is-active {
    transform: translate3d(0, 0, 0);
  }
}

@mixin main-menu() {
  display: inline-block;
}

@mixin main-sub-menu() {
  padding-left: $space-xxl;
  height: 0;
  visibility: hidden;
  li {
    display: inline-block;
    opacity: 0;
    transition: transform .1s linear;
    transform: translate3d(150px, 0, 0);
    color: $ghost;
    &:hover {
      color: $white;
    }
  }
  &.is-active {
    height: auto;
    visibility: visible;
    li {
      opacity: 1;
      transform: translate3d(0, 0, 0);
      transition: transform .25s cubic-bezier(0, 0.87, 0.37, 0.99), opacity .25s linear;
    }
    @for $i from 1 through 10 {
      li:nth-child(#{$i}) {
        transition-delay: $i * .05s + .075s;
      }
    }
  }
}

.ws-header {
  font-size: rem(13px);
  .level-1 {
    @include level-1;
    .application-name {
      padding: 0 $space-m;
      margin-right: $space-xl;
      text-transform: uppercase;
      display: inline-block;
    }
    .main-menu {
      @include main-menu;
    }
    .menu-controls {
      display: inline-block;
      float: right;
      border-left: 1px solid $header-border-color;
      .locale {
        display: inline-block;
        margin-right: 5px;
      }
    }
  }
  .level-2 {
    @include level-2;
    .main-sub-menu {
      @include main-sub-menu;
    }
  }
  li:not(.dropdown-item) {
    display: inline-block;
    text-transform: uppercase;
    transition: all .2s linear;
    &:hover,
    &.is-hovered {
      background-color: $header-accent-background-color;
    }
    a,
    .dropdown-trigger {
      display: block;
      cursor: pointer;
      padding: 0 $space-m;
    }
  }
  a {
    color: inherit;
  }
}

